crates/tree-sitter-command-cad-model/test/corpus/closure.txt
==================
Empty
==================

(,) -> std.None ~ 

---

(source_file
  (expression
    (closure_definition
      (struct_definition)
      (path
        (identifier)
        (identifier))
      (expression
        (void)))))

==================
With argument
==================

(argument: std.types.UInt) -> std.None ~ 

---

(source_file
  (expression
    (closure_definition
      (struct_definition
        (struct_member
          (identifier)
          (declaration_type
            (expression
              (path
                (identifier)
                (identifier)
                (identifier))))))
      (path
        (identifier)
        (identifier))
      (expression
        (void)))))

==================
Path for argument signature
==================

path.to.signature -> std.None ~ 

---

(source_file
  (expression
    (closure_definition
      (path
        (identifier)
        (identifier)
        (identifier))
      (path
        (identifier)
        (identifier))
      (expression
        (void)))))

==================
Call function
==================

value(value=value)

---

(source_file
  (expression
    (function_call
      (expression
        (path
          (identifier)))
      (dictionary_construction
        (dictionary_member_assignment
          (identifier)
          (expression
            (path
              (identifier))))))))

==================
Call no arguments
==================

value()

---

(source_file
  (expression
    (function_call
      (expression
        (path
          (identifier)))
      (dictionary_construction))))

==================
Call function deep in tree
==================

value.value(value=value)

---

(source_file
  (expression
    (function_call
      (expression
        (path
          (identifier)
          (identifier)))
      (dictionary_construction
        (dictionary_member_assignment
          (identifier)
          (expression
            (path
              (identifier))))))))

==================
Call method
==================

value:value(value=value)

---

(source_file
  (expression
    (method_call
      (expression
        (path
          (identifier)))
      (identifier)
      (dictionary_construction
        (dictionary_member_assignment
          (identifier)
          (expression
            (path
              (identifier))))))))

==================
Call method no arguments
==================

value:value()

---

(source_file
  (expression
    (method_call
      (expression
        (path
          (identifier)))
      (identifier)
      (dictionary_construction))))

==================
Call method deep in tree
==================

value.value:value(value=value)

---

(source_file
  (expression
    (method_call
      (expression
        (path
          (identifier)
          (identifier)))
      (identifier)
      (dictionary_construction
        (dictionary_member_assignment
          (identifier)
          (expression
            (path
              (identifier))))))))

